<resources>
    <string name="app_name">StopBy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="post">Post</string>
    <string name="settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="hangoutButton">Hangout</string>
    <string name="studyButton">Study</string>
    <string name="message">Message</string>
    <string name="placeField">Place</string>
    <string name="postButton">Post</string>
    //popup page
    <string name="profile_userInterestTag">Interests</string>
    <string name="profile_closeBtn">X</string>
    <string name="profile_messageBtn">Message</string>
    //menu page
    <string name="menu_postBtn">Be Discovered</string>
    <string name="menu_searchBtn">Explore</string>
    <string name="menu_profileBtn">Profile</string>
    <string name="main_logout">Log out</string>
    <string name="main_userProfile">Account Setting</string>
    <string name="main_chatBtn">Your On-going Chats</string>

    //startup page
    <string name="app_content_description">App Logo</string>
    <string name="loginBtn">Log in</string>
    <string name="registrationBtn">Register</string>

    //registration page
    <string name="register_title">Create a New Account</string>
    <string name="register_username">Display Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">password</string>
    <string name="register_userInfo">What are your interests?</string>

    //login page
    <string name="login_title">Log in</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>

    //post page
    <string name="post_timeField">Time</string>
    <string name="deactivate_post">Deactivate</string>

    //profile page
    <string name="profile_usernameTag">Username:</string>
    <string name="profile_emailTag">Email:</string>
    <string name="profile_userInfoTag">Interests:</string>
    <string name="close">Close</string>

    //accSetting Page
    <string name="accSetting_changeImg">Change Image</string>
    <string name="accSetting_changetext">Change Info</string>

    //profileChange page
    <string name="submitBtn">Submit</string>

    //profile page
    <string name="chatBtn">Chat</string>

    //chat page
    <string name="chat_message_view_hint">Enter your text here</string>

    //locations
    <string name="capen">Capen</string>
    <string name="davis">Davis</string>
    <string name="lockwood">Lockwood</string>
    <string name="su">SU</string>
    <string name="current_location">Current Location</string>

    <string name="choose_location">Choose Location</string>
    <string-array name="choose_location_spinner">
        <item>Current Location</item>
        <item>Capen</item>
        <item>Davis</item>
        <item>Lockwood</item>
        <item>Student Union</item>
    </string-array>

</resources>
